--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,16 @@ android {
     defaultConfig {
         applicationId "voicepro.application"
         minSdkVersion 17
-        targetSdkVersion 22
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            ldLibs "log"
+            moduleName "process"         //生成的so名字
+            abiFilters "armeabi"  //输出指定三种abi体系结构下的so库。目前可有可无。
+            //abiFilters "armeabi", "armeabi-v7a", "x86"  //输出指定三种abi体系结构下的so库。目前可有可无。
+        }
     }
     buildTypes {
         release {
