--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 19 10:59:42 CST 2017
-sdk.dir=E\:\\android-sdk-windows\\android-sdk-windows\\android-sdk-windows
+#Fri Dec 22 22:47:32 GMT+08:00 2017
+sdk.dir=D\:\\android-sdk-windows\\android-sdk-windows
